--- a/SCSS/components/bozo_body.scss
+++ b/SCSS/components/bozo_body.scss
@@ -1,6 +1,6 @@
 .landing-text {
   font-family: "Roboto";
-  font-size: 1.8em;
+  font-size: 1.4vw;
   width: 40%;
   line-height: 1.4em;
   color: orange;
