--- a/SCSS/components/cringebar.scss
+++ b/SCSS/components/cringebar.scss
@@ -5,23 +5,22 @@
   padding-top: 1em;
   border-top: 1px solid orange;
   border-bottom: 1px solid orange;
+  text-align: center;
 }
 
 .cringebar-header {
   font-weight: 900;
   margin-bottom: 0em;
-  text-align: center;
   color: yellow;
+  vertical-align: text-top;
+  margin-bottom: auto;
 }
 
 .cringebar-subheader {
   color: $orange;
   max-width: 15vw;
-}
+  margin-bottom: auto;
 
-.cringebar-icons {
-  font-size: 10rem;
-  text-align: center;
 }
 
 .cringebar-icons--orange {
@@ -32,7 +31,11 @@
   color: purple;
 }
 
-.cringbar-icon {
+.cringebar-icon {
   height: 15vh;
   width: 10vw;
+  align-items: center;
+  justify-self: space-between;
+  margin-left: auto;
+  margin-right: auto;
 }
