--- a/SCSS/components/navbar.scss
+++ b/SCSS/components/navbar.scss
@@ -3,7 +3,7 @@
   margin-left: 0.3em;
   font-size: 2em;
   font-family: "Fira-Sans";
-  color: orange;
+  color: $yellow;
   text-decoration: none; /* no underline */
   font-weight: 700;
 }
