--- a/SCSS/root.scss
+++ b/SCSS/root.scss
@@ -12,13 +12,13 @@
 @import "./SCSS/components/navbar.scss";
 
 
+html {
+  background-color: $black;
+}
+
 body {
   @include font-smoothing();
-
-  background-color: $black;
-
   margin: 0;
-
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -41,6 +41,7 @@ body {
 .flex-column {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .flex-child {
